--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,13 @@ allprojects {
 	compileJava.options.encoding = 'UTF-8'
 	
 	eclipse {
-		/*第一次时请注释这段eclipse设置，可能报错*/
+		/*第一次时请注释这段eclipse设置，可能报错
 		jdt  {
 		    File f = file('.settings/org.eclipse.core.resources.prefs')
 		    f.write('eclipse.preferences.version=1\n')
 		    f.append('encoding/<project>=UTF-8') //use UTF-8
 		}
-		
+		*/
 		
 		/*
 		wtp {
@@ -228,7 +228,7 @@ subprojects {
 		 compile group: 'org.opensaml', name: 'opensaml-security-impl', version: "${opensamlVersion}"
 		 compile group: 'org.opensaml', name: 'opensaml-xmlsec-api', version: "${opensamlVersion}"
 		 compile group: 'org.opensaml', name: 'opensaml-xmlsec-impl', version: "${opensamlVersion}"
-		 compile group: 'net.shibboleth.utilities', name: 'java-support', version: '8.1.0'
+		 compile group: 'net.shibboleth.utilities', name: 'java-support', version: '7.5.1'
          
 		 //jose-jwt
          compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.0.1'
